# embed-collections-rs

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: cron.yml  fast_validate.yml  miri.yml
avl/: Cargo.toml
avl/src/: iter.rs  lib.rs
avl/src/tests/: basic.rs  iter.rs  mod.rs  range_tree.rs
benches/: avl.rs  avl_old.rs  btree.rs  btree_common.rs  btree_std.rs  range_tree_old.rs  seg_list.rs  seglist.rs
btree/: Cargo.toml  Makefile
btree/src/: lib.rs  various_map.rs
btree/src/btree/: cursor.rs  entry.rs  helper.rs  inter.rs  iter.rs  leaf.rs  mod.rs  node.rs
btree/src/btree/tests/: api.rs  delete.rs  entry_move.rs  inter.rs  inter_borrow.rs  inter_underflow.rs  iter.rs  leaf.rs  leaf_borrow.rs  leaf_delete.rs  mod.rs  split.rs
constvec/: Cargo.toml
constvec/src/: lib.rs
dlist/: Cargo.toml
dlist/src/: lib.rs
scripts/: miri.sh  publish.sh
seglist/: Cargo.toml  Makefile
seglist/src/: lib.rs  seglist.rs  various.rs
slist/: Cargo.toml
slist/src/: lib.rs
src/: avl.rs  avl_old.rs  const_vec.rs  dlist.rs  irc.rs  lib.rs  range_tree.rs  range_tree_old.rs  seg_list.rs  slist.rs  slist_owned.rs  test.rs  various.rs  various_map.rs
src/avl/: iter.rs  mod.rs
src/avl/tests/: basic.rs  iter.rs  mod.rs  range_tree.rs
src/btree/: cursor.rs  entry.rs  helper.rs  inter.rs  iter.rs  leaf.rs  mod.rs  node.rs
src/btree/tests/: api.rs  borrow.rs  cache.rs  delete.rs  entry_move.rs  inter.rs  inter_borrow.rs  inter_underflow.rs  iter.rs  leaf.rs  leaf_borrow.rs  leaf_delete.rs  merge.rs  mod.rs  split.rs
test-common/: Cargo.toml
test-common/src/: lib.rs
