[package]
name = "embed-collections"
version = "0.12.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A collection of memory efficient and intrusive data structures"
keywords = ["intrusive", "linked-list", "collection", "avl", "btree"]
categories = ["data-structures", "no-std"]
homepage = "https://github.com/NaturalIO/embed-collections-rs"

[features]
default = ["std", "seglist", "various"]
std = []
avl = []
btree = []
dlist = []
irc = ["dep:atomic-traits"]
seglist = []
slist = []
# for Various & VariousMap
various = []
full = ["avl", "btree", "dlist", "irc", "various", "seglist", "slist"]
# enable log for dev
trace_log = ["dep:log"]

## For profiling symbol
#[profile.release]
#debug = true

[dependencies]
log = { version="0", optional=true}
atomic-traits = { version="0.4", optional=true}

[dev-dependencies]
rstest = "0"
fastrand = "2.3"
criterion2 = { version="3.0.2"}
captains-log = {version="0", features = ["ringfile"] }
log = { version="0"}
crossfire = "3.1"

[[bench]]
name = "avl"
harness = false
required-features = ["avl"]

[[bench]]
name = "seg_list"
harness = false

[[bench]]
name = "btree"
harness = false
required-features = ["btree"]

[[bench]]
name = "btree_std"
harness = false

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
new_ret_no_self = "allow"
needless_range_loop = "allow"
type_complexity = "allow"
mut_from_ref = "allow"
transmute_ptr_to_ref = "allow"
len_without_is_empty = "allow"
new_without_default = "allow"
result_unit_err = "allow"
collapsible_else_if = "allow"
collapsible_match = "allow"
