[package]
name = "embed-avl"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "intrusive avl tree"
keywords = ["avl", "intrusive"]
categories = ["data-structures", "no-std"]
homepage = "https://github.com/NaturalIO/embed-collections-rs"
readme = "../README.md"

[dependencies]
pointers = {version="0"}

[dev-dependencies]
embed-collections-test = {path="../test-common"}
log = { version="0"}
rstest = "0"
fastrand = "2.3"

[features]
default = []
std = []

[package.metadata.docs.rs]
all-features = true
# enable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]


[lints.clippy]
new_ret_no_self = "allow"
needless_range_loop = "allow"
type_complexity = "allow"
mut_from_ref = "allow"
transmute_ptr_to_ref = "allow"
len_without_is_empty = "allow"
new_without_default = "allow"
result_unit_err = "allow"
collapsible_else_if = "allow"
collapsible_match = "allow"
