[package]
name = "embed-seglist"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Cpu-cache friendly linkedlist with fixed-capacity segment"
keywords = ["linked-list"]
categories = ["data-structures", "no-std"]
homepage = "https://github.com/NaturalIO/embed-collections-rs"
readme = "../README.md"

[dependencies]
embed-collections = {path="../", version="1"}

[dev-dependencies]
test-common = {path="../test-common", version="0"}
log = { version="0"}


[features]
default = []

[lints.clippy]
new_ret_no_self = "allow"
needless_range_loop = "allow"
type_complexity = "allow"
mut_from_ref = "allow"
transmute_ptr_to_ref = "allow"
len_without_is_empty = "allow"
new_without_default = "allow"
result_unit_err = "allow"
collapsible_else_if = "allow"
collapsible_match = "allow"
